<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:autofillHints="emailAddress"
        android:layout_marginTop="79dp"
        android:background="@drawable/radius"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:hintEnabled="false"
        app:expandedHintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:autofillHints="password"
            android:background="@drawable/radius"
            android:textColorHint="@color/black"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/purple_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/sign_up_button"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>